Switched Vectorstorm license to zlib.

--- a/README
+++ b/README
@@ -1,23 +1,25 @@
-VectorStorm is intended to be a professional-grade game engine for
-two purposes.
+VectorStorm is intended to be a professional-grade game engine for two
+purposes.
 
-First, to serve as an educational jumping off point for programmers
-who are comfortable writing console applications, and are ready to
-start thinking about graphical ideas, but not yet ready to create
-an entire game engine.
+First, to serve as an educational jumping off point for programmers who are
+comfortable writing console applications, and are ready to start thinking about
+graphical ideas, but not yet ready to create an entire game engine.
 
-Second, to serve as a rapid gameplay prototyping platform for
-myself and for others.
+Second, to serve as a rapid gameplay prototyping platform for myself and for
+others.
 
-Historically, VectorStorm was designed to solely support 2D
-vector graphic games, but today it supports 3D, textured polygons,
-and simple shaders.
+Historically, VectorStorm was designed to solely support 2D vector graphic
+games, but today it supports 3D, textured polygons, and simple shaders.
 
 
-VectorStorm is distributed under the GPLv3 license, but please
-feel free to contact me if you'd like to discuss alternate
-licensing arrangements.
+The VectorStorm engine and its component code is distributed under the terms of
+the zlib license, and may be freely used or re-used in open-source or
+proprietary projects.  Acknowledgement of the use of the code is always
+appreciated, but is not required.
 
+Note that individual games implemented using the VectorStorm engine may not
+themselves be covered by the zlib license; the zlib license grant only covers
+the code in the VectorStorm engine itself.
 
 - Trevor Powell
 trevor -at- vectorstorm -dot- org
